--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,22 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/item1"
+        android:id="@+id/nav_Home"
         android:title="@string/menu_home"
         android:icon="@drawable/ic_home"/>
 
     <item
-        android:id="@+id/item2"
-        android:title="@string/menu_search"
-        android:icon="@drawable/ic_search"/>
+        android:id="@+id/nav_shopping"
+        android:title="@string/menu_shopping"
+        android:icon="@drawable/ic_shopping"/>
 
     <item
-        android:id="@+id/item3"
+        android:id="@+id/nav_message"
         android:title="@string/menu_message"
         android:icon="@drawable/ic_message"/>
 
     <item
-        android:id="@+id/user"
+        android:id="@+id/nav_user"
         android:title="@string/menu_profile"
         android:icon="@drawable/ic_profile"/>
+
+
+
+
 </menu>
