--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#092BD6</color>
     <color name="colorPrimaryDark">#0620A3</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="darker_gray">#BE8A62</color>
+    <color name="colorBlack">#000000</color>
+
+
 </resources>
