--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/darker_gray"
+        android:minHeight="?attr/actionBarSize"
+
+        />
+
     <View
+        android:layout_below="@id/toolbar"
         android:id="@+id/topView"
         android:layout_width="match_parent"
         android:layout_height="150dp"
@@ -16,8 +26,9 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@id/topView"
-        android:background="@drawable/wave"
-        />
+        android:layout_marginTop="-1dp"
+        android:background="@drawable/wave" />
+
     <TextView
         android:id="@+id/topText"
         android:layout_width="wrap_content"
@@ -33,7 +44,7 @@
 
 
     <EditText
-        android:layout_marginTop="250dp"
+        android:layout_below="@id/view5"
         android:padding="16dp"
         android:id="@+id/edUserHoTen"
         android:layout_width="match_parent"
@@ -46,8 +57,9 @@
         android:drawableStart="@drawable/ic_email"
         />
     <EditText
-        android:layout_marginTop="330dp"
+        android:layout_below="@id/edUserHoTen"
         android:padding="16dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/edEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,8 +71,9 @@
         android:drawableStart="@drawable/ic_lock"
         />
     <EditText
-        android:layout_marginTop="400dp"
+        android:layout_below="@+id/edEmail"
         android:padding="16dp"
+        android:layout_marginTop="10dp"
         android:id="@+id/edSdt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -72,9 +85,10 @@
         android:drawableStart="@drawable/ic_lock"
         />
     <EditText
-        android:layout_marginTop="470dp"
+        android:layout_below="@+id/edSdt"
         android:padding="16dp"
         android:id="@+id/edMk"
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/round_border"
@@ -85,12 +99,13 @@
         android:drawableStart="@drawable/ic_lock"
         />
     <EditText
-        android:layout_marginTop="540dp"
+        android:layout_below="@+id/edMk"
         android:padding="16dp"
         android:id="@+id/ednhaplai"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/round_border"
+        android:layout_marginTop="10dp"
         android:hint="@string/nhaplai"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -119,10 +134,6 @@
         android:layout_marginEnd="32dp"
         android:drawablePadding="8dp"
         android:layout_height="wrap_content"/>
-
-
-
-
 
 
 
