--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,6 +20,7 @@
             android:layout_width="390dp"
             android:layout_height="match_parent"
             android:orientation="horizontal"
+            android:padding="3dp"
             android:background="@drawable/round_editext"
             >
             <EditText
