--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".LoginActivity"
+    >
 
     <View
         android:id="@+id/topView"
         android:layout_width="0dp"
         android:layout_height="150dp"
-        android:background="@color/darker_gray"
+        android:background="@color/colorBlue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,10 +45,10 @@
         android:layout_marginStart="32dp"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="48dp"
+        android:fontFamily="@font/regular"
         android:text="ĐĂNG NHẬP HỆ THỐNG"
         android:textColor="@android:color/white"
-        android:textSize="30sp"
-        android:textStyle="bold"
+        android:textSize="25dp"
         app:layout_constraintEnd_toStartOf="@+id/imageView5"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/topView"
@@ -65,6 +67,7 @@
 
         android:hint="@string/email"
         android:padding="16dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view5" />
@@ -80,6 +83,7 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawableLeft="@drawable/ic_lock"
         android:drawablePadding="16dp"
+        android:textStyle="bold"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="16dp"
@@ -95,7 +99,7 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="8dp"
         android:text="Lưu mật khẩu"
-        android:textStyle="bold"
+        android:fontFamily="@font/regular"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -108,8 +112,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="32dp"
+        android:fontFamily="@font/regular"
         android:background="@drawable/round_bg"
-        android:onClick="checkLogin"
         android:text="@string/login"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -125,9 +129,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/regular"
         android:layout_marginEnd="32dp"
         android:background="@drawable/round_bg"
-        android:onClick="checkLogin"
         android:text="@string/register"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -145,7 +149,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:text="@string/forgot_password"
-        android:textColor="@color/darker_gray"
+        android:fontFamily="@font/regular"
+        android:textColor="@color/colorBlue"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
