--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,14 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".RegisterActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/darker_gray"
+        android:layout_alignParentStart="true"
+        style="@style/abc"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+
+        android:background="@color/colorBlue"
         android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
 
         />
 
@@ -18,7 +26,7 @@
         android:id="@+id/topView"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:background="@color/darker_gray"
+        android:background="@color/colorBlue"
         />
 
     <View
@@ -34,6 +42,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
+        android:fontFamily="@font/regular"
+        android:layout_centerHorizontal="true"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="85dp"
         android:text="Đăng kí"
@@ -44,20 +54,21 @@
 
 
     <EditText
-        android:layout_below="@id/view5"
-        android:padding="16dp"
         android:id="@+id/edUserHoTen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/round_border"
-        android:hint="@string/hoten"
+        android:layout_below="@id/view5"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="-2dp"
         android:layout_marginEnd="32dp"
-        android:drawablePadding="16dp"
+        android:background="@drawable/round_border"
         android:drawableStart="@drawable/ic_email"
-        />
+        android:drawablePadding="16dp"
+        android:hint="@string/hoten"
+        android:padding="16dp" />
+
     <EditText
-        android:layout_below="@id/edUserHoTen"
+        android:layout_below="@id/edSdt"
         android:padding="16dp"
         android:layout_marginTop="10dp"
         android:id="@+id/edEmail"
@@ -71,7 +82,7 @@
         android:drawableStart="@drawable/ic_lock"
         />
     <EditText
-        android:layout_below="@+id/edEmail"
+        android:layout_below="@+id/edUserHoTen"
         android:padding="16dp"
         android:layout_marginTop="10dp"
         android:id="@+id/edSdt"
@@ -85,7 +96,7 @@
         android:drawableStart="@drawable/ic_lock"
         />
     <EditText
-        android:layout_below="@+id/edSdt"
+        android:layout_below="@+id/edEmail"
         android:padding="16dp"
         android:id="@+id/edMk"
         android:layout_marginTop="10dp"
@@ -115,7 +126,7 @@
     <Button
         android:padding="8dp"
         android:layout_marginLeft="20dp"
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnregister"
        android:layout_below="@id/ednhaplai"
         android:layout_weight="1"
         android:layout_margin="16dp"
@@ -125,7 +136,7 @@
         android:layout_height="wrap_content"
         android:text="Đăng kí" />
     <TextView
-        android:layout_below="@id/btnLogin"
+        android:layout_below="@id/btnregister"
         android:layout_width="match_parent"
         android:text="@string/style"
         android:textStyle="bold"
