--- a/app/src/main/res/layout/carts_item.xml
+++ b/app/src/main/res/layout/carts_item.xml
@@ -4,26 +4,31 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:background="@color/colorWhite"
 
-    <RadioButton
-        android:id="@+id/radioButton2"
+    >
+
+    <CheckBox
+        android:id="@+id/checkbox_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="12dp"
+        android:layout_centerVertical="true"
         android:layout_marginTop="28dp" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:id="@+id/image_carts"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
         android:layout_alignParentTop="true"
         android:layout_marginStart="3dp"
-        android:layout_marginTop="6dp"
-        android:layout_toEndOf="@+id/radioButton2"
+        android:layout_marginTop="4dp"
+        android:layout_toEndOf="@+id/checkbox_item"
         tools:srcCompat="@tools:sample/avatars"
+
+
         />
 
     <TextView
@@ -32,8 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginStart="23dp"
-        android:layout_marginTop="9dp"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_marginTop="10dp"
+        android:layout_toEndOf="@+id/image_carts"
         android:text="ten dien thoai" />
 
     <TextView
@@ -44,36 +49,40 @@
         android:layout_marginStart="23dp"
         android:layout_marginTop="7dp"
 
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/image_carts"
         android:text="gia dien thoai" />
 
     <ImageButton
-        android:id="@+id/button"
+        android:id="@+id/minus_btn"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="26dp"
+        android:layout_centerVertical="true"
         android:layout_marginEnd="28dp"
         android:src="@drawable/ic_baseline_remove_24"
         />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/text_amount"
         android:layout_width="19dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="30dp"
+        android:layout_centerVertical="true"
+        android:gravity="center"
         android:layout_marginEnd="6dp"
-        android:layout_toStartOf="@+id/button"
+        android:layout_toStartOf="@+id/minus_btn"
         android:text="0" />
 
     <ImageButton
+        android:id="@+id/plus_btn"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
         android:layout_marginTop="26dp"
         android:layout_marginEnd="6dp"
-        android:layout_toStartOf="@+id/textView4"
+        android:layout_toStartOf="@+id/text_amount"
         android:src="@drawable/ic_baseline_add_24" />
 </RelativeLayout>
