--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,9 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChangePasswordActivity">
+    tools:context=".ChangePasswordActivity"
+    >
+    <Toolbar
+        android:id="@+id/toolbar_changepass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorBlue"
+        />
+    <TextView
+        android:layout_below="@+id/toolbar_changepass"
+        android:id="@+id/title"
+        android:text="Đổi mật khẩu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="30dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/dosis_bold"
+        android:textColor="@color/colorBlack"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <EditText
+        android:id="@+id/edit_oldpass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_below="@+id/title"
+        android:hint="Mật khẩu cũ"
+        android:fontFamily="@font/dosis_bold"
+        android:layout_margin="10dp"
+        />
+    <EditText
+        android:id="@+id/edit_newpass"
+        android:layout_width="match_parent"
+        android:fontFamily="@font/dosis_bold"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:hint="Mật khẩu mới"
+        android:layout_below="@+id/edit_oldpass"
+        />
+    <EditText
+        android:id="@+id/edit_newpass_again"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dosis_bold"
+        android:layout_margin="10dp"
+        android:hint="Nhập lại mật khẩu mới"
+        android:layout_below="@+id/edit_newpass"
+        />
+
+    <Button
+        android:id="@+id/btnChange"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/dosis_bold"
+        android:layout_below="@+id/edit_newpass_again"
+        android:layout_margin="10dp"
+        android:text="Đổi mật khẩu"
+        android:textSize="18dp"
+        android:background="@color/colorBlue"
+        android:textColor="@color/colorWhite"
+        />
+
+</RelativeLayout>
