--- a/app/src/main/res/layout/activity_feed_back.xml
+++ b/app/src/main/res/layout/activity_feed_back.xml
@@ -6,8 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".FeedBackActivity">
 
-
+    <Toolbar
+    android:id="@+id/toolbar_feedback"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorBlue"
+    />
     <TextView
+        android:layout_below="@+id/toolbar_feedback"
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
@@ -31,10 +37,10 @@
             android:layout_height="wrap_content"
             />
         <EditText
-            android:id="@+id/decription"
+            android:id="@+id/describe"
             android:hint="Miêu tả"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
+            android:layout_height="400dp"
             android:lines="10"
             android:gravity="start|top"
             android:layout_margin="10dp"
@@ -43,7 +49,7 @@
             />
         <Button
             android:id="@+id/btn_send"
-            android:layout_below="@+id/decription"
+            android:layout_below="@+id/describe"
             android:text="Gửi"
             android:layout_margin="10dp"
             android:textStyle="bold"
