--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -21,6 +21,7 @@
             android:id="@+id/toolbar_title"
             />
         <ImageView
+            android:id="@+id/image_online"
             android:layout_width="10dp"
             android:layout_height="10dp"
             android:layout_gravity="center"
