--- a/app/src/main/res/layout/carts_item.xml
+++ b/app/src/main/res/layout/carts_item.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentStart="true"
         android:layout_marginStart="12dp"
         android:layout_centerVertical="true"
-        android:layout_marginTop="28dp" />
+        android:layout_marginTop="28dp"
+        />
 
     <ImageView
         android:id="@+id/image_carts"
@@ -38,11 +39,15 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="23dp"
         android:layout_marginTop="10dp"
+        android:textColor="@color/colorBlack"
+        android:textSize="18dp"
+        android:fontFamily="@font/dosis_bold"
         android:layout_toEndOf="@+id/image_carts"
         android:text="ten dien thoai" />
 
     <TextView
         android:id="@+id/giadienthoai"
+        android:fontFamily="@font/dosis_bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/namephone"
@@ -61,7 +66,7 @@
         android:layout_marginTop="26dp"
         android:layout_centerVertical="true"
         android:layout_marginEnd="28dp"
-        android:src="@drawable/ic_baseline_remove_24"
+        android:src="@drawable/ic_baseline_indeterminate_check_box_24"
         />
 
     <TextView
@@ -69,6 +74,7 @@
         android:layout_width="19dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:fontFamily="@font/dosis_bold"
         android:layout_marginTop="30dp"
         android:layout_centerVertical="true"
         android:gravity="center"
@@ -84,5 +90,5 @@
         android:layout_marginTop="26dp"
         android:layout_marginEnd="6dp"
         android:layout_toStartOf="@+id/text_amount"
-        android:src="@drawable/ic_baseline_add_24" />
+        android:src="@drawable/ic_baseline_add_box_24" />
 </RelativeLayout>
