--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,8 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="180dp"
     android:padding="20dp"
+    android:background="@color/colorBlue"
+
     >
 
 
@@ -14,8 +16,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-
+        android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="19dp"
         android:src="@mipmap/ic_launcher_round" />
@@ -24,10 +25,11 @@
         android:id="@+id/text_Email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/text_fullname"
         android:layout_marginLeft="13dp"
+        android:textSize="20dp"
         android:fontFamily="@font/dosis_bold"
-        android:layout_marginTop="52dp"
+        android:textColor="@color/colorWhite"
         android:layout_toRightOf="@+id/image_user"
         android:text="your email" />
 
@@ -36,11 +38,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:fontFamily="@font/dosis_bold"
-        android:textSize="18dp"
+        android:textSize="25dp"
+
         android:layout_marginLeft="13dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="34dp"
         android:layout_toRightOf="@+id/image_user"
         android:text="ho ten" />
 
