--- a/app/src/main/res/layout/activity_manager_feed_back.xml
+++ b/app/src/main/res/layout/activity_manager_feed_back.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManagerPhoneActivity">
+    tools:context=".ManagerFeedBackActivity">
 
     <Toolbar
         android:id="@+id/toolbar_transaction_history"
@@ -21,7 +21,7 @@
         android:layout_below="@id/toolbar_transaction_history"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/dosis_bold"
-        android:text="Quản lý điện thoại"
+        android:text="Quản lý phản hồi"
         android:textColor="@color/colorBlack"
         android:textSize="30dp" />
     <androidx.recyclerview.widget.RecyclerView
@@ -41,6 +41,7 @@
         android:layout_marginEnd="42dp"
         android:layout_marginBottom="42dp"
         />
+
 
 
 </RelativeLayout>
