--- a/app/src/main/res/layout/dialog_order.xml
+++ b/app/src/main/res/layout/dialog_order.xml
@@ -18,7 +18,9 @@
 
             android:layout_alignParentTop="true"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+
+            />
 
         <TextView
             android:id="@+id/namePhone"
